k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: limoneno-backend
spec:
  template:
    spec:
      containers:
      - name: limoneno-backend
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
